bug fix
fixed logout action
fixed sync work
fixed api logic